--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+table, th, td {
+  border: 1px solid;
+}
+
+td, th {
+  padding: 10px;
+}
+
+table {
+  margin: 15px;
+}
